tests/rosetta/transpiler/Rust/averages-arithmetic-mean.error
warning: unused import: `std::collections::HashMap`
 --> /workspace/mochi/tests/rosetta/transpiler/Rust/averages-arithmetic-mean.rs:2:5
  |
2 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/averages-arithmetic-mean.rs:69:2
   |
69 | };
   |  ^ help: remove this semicolon
   |
   = note: `#[warn(redundant_semicolons)]` on by default

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/averages-arithmetic-mean.rs:82:2
   |
82 | };
   |  ^ help: remove this semicolon

warning: unnecessary parentheses around `if` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/averages-arithmetic-mean.rs:59:8
   |
59 |     if ((v.len() as i64) == 0) {
   |        ^                     ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
59 -     if ((v.len() as i64) == 0) {
59 +     if (v.len() as i64) == 0 {
   |

warning: unnecessary parentheses around `while` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/averages-arithmetic-mean.rs:64:11
   |
64 |     while (i < (v.len() as i64)) {
   |           ^                    ^
   |
help: remove these parentheses
   |
64 -     while (i < (v.len() as i64)) {
64 +     while i < (v.len() as i64) {
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/averages-arithmetic-mean.rs:65:15
   |
65 |         sum = (sum + v[i as usize]);
   |               ^                   ^
   |
help: remove these parentheses
   |
65 -         sum = (sum + v[i as usize]);
65 +         sum = sum + v[i as usize];
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/averages-arithmetic-mean.rs:66:13
   |
66 |         i = (i + 1);
   |             ^     ^
   |
help: remove these parentheses
   |
66 -         i = (i + 1);
66 +         i = i + 1;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/averages-arithmetic-mean.rs:86:28
   |
86 |     let duration_us: i64 = ((_end - _start) / 1000);
   |                            ^                      ^
   |
help: remove these parentheses
   |
86 -     let duration_us: i64 = ((_end - _start) / 1000);
86 +     let duration_us: i64 = (_end - _start) / 1000;
   |

warning: variable does not need to be mutable
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/averages-arithmetic-mean.rs:74:13
   |
74 |         let mut r: Map = mean(&mut v);
   |             ----^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error[E0596]: cannot borrow `v` as mutable, as it is not declared as mutable
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/averages-arithmetic-mean.rs:74:31
   |
74 |         let mut r: Map = mean(&mut v);
   |                               ^^^^^^ cannot borrow as mutable
   |
note: the binding is already a mutable borrow
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/averages-arithmetic-mean.rs:72:9
   |
72 |     for v in sets.iter_mut() {
   |         ^
help: try removing `&mut` here
   |
74 -         let mut r: Map = mean(&mut v);
74 +         let mut r: Map = mean(v);
   |

error: aborting due to 1 previous error; 9 warnings emitted

For more information about this error, try `rustc --explain E0596`.
